src/test_files/invalid/i2.vip
if x < 10 {                 # Es incorrecto porque falta el token ":"
  x = x + 1
}
